--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
         "symfony/options-resolver": "^4.4",
         "symfony/translation": "^4.4",
         "twig/twig": "^2.13|^3.0.4",
-        "intracto/elastic_synonym": "dev-master"
+        "intracto/elastic-synonym": "^0.1"
     }
 }
