--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "symfony/config": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/form": "4.4.*",
-        "symfony/http-kernel": "^4.4",
-        "symfony/options-resolver": "^4.4",
-        "symfony/translation": "^4.4",
+        "symfony/config": "^4.4|^5.0",
+        "symfony/dependency-injection": "^4.4|^5.0",
+        "symfony/form": "^4.4|^5.0",
+        "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/options-resolver": "^4.4|^5.0",
+        "symfony/translation": "^4.4|^5.0",
         "twig/twig": "^2.13|^3.0.4",
         "intracto/elastic-synonym": "^1.0"
     }
