--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
-        "symfony/config": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/options-resolver": "^4.4|^5.0",
-        "symfony/translation": "^4.4|^5.0",
-        "twig/twig": "^2.13|^3.0.4",
+        "php": ">=8.0",
+        "symfony/config": "^6.0|^7.0",
+        "symfony/dependency-injection": "^6.0|^7.0",
+        "symfony/form": "^6.0|^7.0",
+        "symfony/http-kernel": "^6.0|^7.0",
+        "symfony/options-resolver": "^6.0|^7.0",
+        "symfony/translation": "^6.0|^7.0",
+        "twig/twig": "^3.0",
         "intracto/elastic-synonym": "^1.0"
     }
 }
